# freelas

./: .env.example  .gitignore  .tool-versions  pyproject.toml
src/: main.py
src/freelas/: settings.py
src/freelas/discord/: webhook.py
src/freelas/http/: client.py
src/freelas/scraping/: soup.py
src/freelas/task/: iter.py
